--- a/Source/LeaderboardTest/LeaderboardTest.vcxproj.filters
+++ b/Source/LeaderboardTest/LeaderboardTest.vcxproj.filters
@@ -1,19 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="Leaderboard.cpp">
-      <Filter>Resource Files</Filter>
-    </ClCompile>
     <ClCompile Include="main.cpp">
-      <Filter>Resource Files</Filter>
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Leaderboard.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Header Files">
       <UniqueIdentifier>{24134493-dca9-4aa3-aace-1232084c56b0}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Resource Files">
+    <Filter Include="Source Files">
       <UniqueIdentifier>{28fe0a0c-16d3-4693-963d-5e105716068e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Resource Files">
+      <UniqueIdentifier>{6df37822-76ba-45a4-8c64-064efe008c3f}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
