--- a/Source/PhysicsTest/PhysicsTest.vcxproj
+++ b/Source/PhysicsTest/PhysicsTest.vcxproj
@@ -79,7 +79,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>$(SolutionDir)SFML\lib; $(SolutionDir)Bin</AdditionalLibraryDirectories>
-      <AdditionalDependencies>Events.lib;Physics.lib;sfml-window.lib;sfml-system.lib;sfml-graphics.lib;sfml-window.lib;sfml-network.lib;sfml-audio.lib;Input.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>Events.lib;Physics.lib;sfml-window.lib;sfml-system.lib;sfml-graphics.lib;sfml-network.lib;sfml-audio.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
